--- a/art.html
+++ b/art.html
@@ -4,93 +4,47 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../styles.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Art Gallery</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="art.html">3D</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="year.html">Year Progress</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="empty_form.html">Form</a>
-                    </li>
-            </div>
-        </div>
+    <nav>
+        <ul class="nav">
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="art.html">3D</a></li>
+            <li><a href="year.html">Year Progress</a></li>
+            <li><a href="empty_form.html">Form</a></li>
+        </ul>
     </nav>
-
-    <div class="container">
-        <header class="text-center mb-5">
-            <h1 class="heading">3D Art Gallery</h1>
+        <header>
+            <h1>3D Art Gallery</h1>
         </header>
 
-        <div class="gallery-grid" id="gallery">
-            <!-- Images will be loaded here -->
-        </div>
-    </div>
-
-    <!-- Add Modal for image expansion -->
-    <div class="modal fade" id="imageModal" tabindex="-1" aria-labelledby="imageModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg modal-dialog-centered">
-            <div class="modal-content">
-                <div class="modal-body p-0">
-                    <button type="button" class="btn-close position-absolute top-0 end-0 p-3" data-bs-dismiss="modal" aria-label="Close"></button>
-                    <img id="modalImage" src="" class="img-fluid" alt="Expanded artwork">
-                </div>
+        <div id="gallery">
+            <div class="gallery-item">
+                <img src="Assets/3D_art/cubefieldr2-min.png" alt="Cube Field">
+                <img src="Assets/3D_art/cubefieldr3-min.png" alt="Cube Field 2">
+                <img src="Assets/3D_art/finalrendercomp-min.png" alt="Bear">
+                <img src="Assets/3D_art/finnah2-2-min.png" alt="Space">
+                <img src="Assets/3D_art/finnah3-min.png" alt="Space view 2">
+                <img src="Assets/3D_art/Floofball3-min.png" alt="Floofball angry bird">
+                <img src="Assets/3D_art/fluiddifangle3-min.png" alt="Fluid Angle">
+                <img src="Assets/3D_art/glassred-min.png" alt="Red Glass">
+                <img src="Assets/3D_art/Merry Christmas-min.png" alt="Merry Christmas">
+                <img src="Assets/3D_art/Merrychristmas!-min.png" alt="Christmas warmth">
+                <img src="Assets/3D_art/octopusweird-min.png" alt="Patrick the octopus">
+                <img src="Assets/3D_art/staryplateb-min.png" alt="Starry Plate">
+                <img src="Assets/3D_art/tree3-min.png" alt="Tree">
+                <img src="Assets/3D_art/spaceman-min.png" alt="Spaceman">
             </div>
         </div>
-    </div>
 
-    <script>
-        // Array of image filenames 
-        const images = [
-            'cubefieldr2-min.png',
-            'cubefieldr3-min.png',
-            'finalrendercomp-min.png',
-            'finnah2-2-min.png',
-            'finnah3-min.png',
-            'Floofball3-min.png',
-            'fluiddifangle3-min.png',
-            'glassred-min.png',
-            'Merry Christmas-min.png',
-            'Merrychristmas!-min.png',
-            'octopusweird-min.png',
-            'staryplateb-min.png',
-            'tree3-min.png',
-            'spaceman-min.png'
-        ];
-
-        const gallery = document.getElementById('gallery');
-        
-        // Update gallery item template
-        images.forEach(image => {
-            gallery.innerHTML += `
-                <div class="art-card">
-                    <img src="Assets/3D_art/${image}" 
-                         alt="3D Artwork"
-                         onclick="showImage(this.src)"
-                         onerror="this.onerror=null; this.src='Assets/placeholder.png';">
-                </div>
-            `;
-        });
-
-        function showImage(src) {
-            document.getElementById('modalImage').src = src;
-            new bootstrap.Modal(document.getElementById('imageModal')).show();
-        }
-    </script>
+        <footer>
+            <h6>Email Me!</h6>
+            <p><a href="mailto:jovan@jovandevadoss.com" style="text-decoration: none; color: inherit;">📬 jovandevadoss447@gmail.com</a></p>
+            <div class="social-links">
+                <a href="https://x.com/DevadossJovan" target="_blank" title="Follow me on X">𝕏</a>
+                <a href="https://www.instagram.com/jovandevadoss/" target="_blank" title="Follow me on Instagram">📸</a>
+            </div>
+        </footer>
 </body>
 </html>
