--- a/empty_form.html
+++ b/empty_form.html
@@ -4,53 +4,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../styles.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Jovan</title>
+</head>
 <body> 
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="art.html">3D</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="year.html">Year Progress</a>
-                    </li>
-                    <li class="nav-item active">
-                        <a class="nav-link" href="empty_form.html">Form</a>
-                    </li>
-            </div>
-        </div>
+    <nav>
+        <ul class = "nav">
+            <li><a href="index.html">Home</a></li>
+            <li><a href="art.html">3D</a></li>
+            <li><a href="year.html">Year Progress</a></li>
+            <li class="active"><a href="empty_form.html">Form</a></li>
+        </ul>
     </nav>
 
-    <div style="display: flex; justify-content: center; align-items: center; min-height: calc(100vh - 200px);">
-        <div class="custom-container" style="max-width: 600px; width: 90%; margin: 20px;">
-            <form id="contactForm" class="needs-validation" novalidate>
-                <div class="mb-3">
-                    <textarea class="form-control" rows="4" placeholder="The contents of this form will be sent into the void." required></textarea>
-                </div>
-                <div class="text-center">
-                    <button type="submit" class="custom-button">
-                        Void
-                    </button>
-                    <br>
-                    <br>
-                    <p>If you want to actually send Jovan a message, please send Jovan an email (this form doesnt work).</p>
-                </div>
-            </form>
-        </div>
+    <div class = "form-section">
+        <form id="contactForm">
+                <textarea rows="4" placeholder="The contents of this form will be sent into the void." required></textarea>
+                    <div class="form-actions">
+                        <button class = "form-button" type="submit">Void</button>
+                        <p>If you want to actually send Jovan a message, please send Jovan an email (this form doesnt work).</p>
+                    </div>
+        </form>
     </div>
-    <br>        
-    <br>
-    <div class = "vl"></div>
+
+    <div class="vl"></div>
 </body>
 <footer>
     <h6>Email Me!</h6>
