--- a/index.html
+++ b/index.html
@@ -4,80 +4,48 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="../styles.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <title>Jovan</title>
-
-    <script>
-        document.addEventListener("DOMContentLoaded", function() {
-            document.getElementById("Pestisearch").addEventListener("click", function() {
-                window.open("http://www.pestisearch.com", "_blank");
-            });
-            document.getElementById("Paveble").addEventListener("click", function() {
-                window.open("https://www.paveble.com", "_blank");
-            });
-        });
-
-        function toggleNav() {
-            document.getElementById('navbarNav').classList.toggle('show');
-        }
-    </script>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <div class="container-fluid">
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav mx-auto">
-                    <li class="nav-item active">
-                        <a class="nav-link" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="art.html">3D</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="year.html">Year Progress</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="empty_form.html">Form</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </nav>
 </head>
-
 <body> 
+    <nav>
+        <ul class = "nav">
+            <li class="active"><a href="index.html">Home</a></li>
+            <li><a href="art.html">3D</a></li>
+            <li><a href="year.html">Year Progress</a></li>
+            <li><a href="empty_form.html">Form</a></li>
+        </ul>
+    </nav>
+
     <div class="portfolio-section">
-        <header class="text-center">
-            <h1 class="home_title">👋</h1>
-            <h5 class="gradient-text">This is Jovan's Website</h5>
+        <header>
+            <h1>👋</h1>
+            <h5>This is Jovan's Website</h5>
         </header>
                 
         <div class="projects">
-            <div class="project-card">
-                <h2 class="project-title">Pestisearch</h2>
+            <div class="project">
+                <h2>Pestisearch</h2>
                 <p>Need crop protection advice? Pestisearch is here to provide you with instant, profitable, and sustainable crop protection advice!</p>
-                <button class="custom-button" id="Pestisearch">Visit Pestisearch</button>
+                <button id="Pestisearch" onclick="window.open('https://www.pestisearch.com', '_blank')">Visit Pestisearch</button>
             </div>
 
-            <div class="project-card">
-                <h2 class="project-title">Paveble</h2>
+            <div class="project">
+                <h2>Paveble</h2>
                 <p>Working on making braille even more accessible</p>
-                <button class="custom-button" id="Paveble">Visit Paveble</button>
+                <button id="Paveble">Visit Paveble</button>
             </div>
         </div>
     </div>
-    <br>        
-    <br>
-    <div class = "vl"></div>
+
+    <div class="vl"></div>
+
+    <footer>
+        <h6>Email Me!</h6>
+        <p><a href="mailto:jovan@jovandevadoss.com" style="text-decoration: none; color: inherit;">📬 jovandevadoss447@gmail.com</a></p>
+        <div class="social-links">
+            <a href="https://x.com/DevadossJovan" target="_blank" title="Follow me on X">𝕏</a>
+            <a href="https://www.instagram.com/jovandevadoss/" target="_blank" title="Follow me on Instagram">📸</a>
+        </div>
+    </footer>
 </body>
-<footer>
-    <h6>Email Me!</h6>
-    <p><a href="mailto:jovan@jovandevadoss.com" style="text-decoration: none; color: inherit;">📬 jovandevadoss447@gmail.com</a></p>
-    <div class="social-links">
-        <a href="https://x.com/DevadossJovan" target="_blank" title="Follow me on X">𝕏</a>
-        <a href="https://www.instagram.com/jovandevadoss/" target="_blank" title="Follow me on Instagram">📸</a>
-    </div>
-</footer>
 </html>
