--- a/art.html
+++ b/art.html
@@ -2,13 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="description" content="3D Art Gallery - Showcasing digital art creations">
+    <meta name="author" content="Jovan Devadoss">
+    <meta name="theme-color" content="#ffffff">
+    <meta property="og:title" content="3D Art Gallery - Jovan Devadoss">
+    <meta property="og:description" content="Collection of 3D artwork and digital creations">
+    <meta property="og:type" content="website">
     <link href="../styles.css" rel="stylesheet">
     <title>Art Gallery</title>
 </head>
 <body>
     <nav>
-        <ul class="nav">
+        <ul>
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="art.html">3D</a></li>
             <li><a href="year.html">Year Progress</a></li>
