--- a/index.html
+++ b/index.html
@@ -2,13 +2,19 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="description" content="Jovan Devadoss - Personal Website and Portfolio">
+    <meta name="author" content="Jovan Devadoss">
+    <meta name="theme-color" content="#ffffff">
+    <meta property="og:title" content="Jovan Devadoss">
+    <meta property="og:description" content="Personal website showcasing projects and work">
+    <meta property="og:type" content="website">
     <link href="../styles.css" rel="stylesheet">
     <title>Jovan</title>
 </head>
 <body> 
     <nav>
-        <ul class = "nav">
+        <ul>
             <li class="active"><a href="index.html">Home</a></li>
             <li><a href="art.html">3D</a></li>
             <li><a href="year.html">Year Progress</a></li>
