added more details about paveble

--- a/paveble.html
+++ b/paveble.html
@@ -45,6 +45,26 @@
         <h2>What role do I play at Paveble?</h2>
         <p>I am responsible for all technical aspects of the project. I collaborated closely with the team at Kerala Startup Mission and successfully developed our first functional braille cell and PCB prototype after over 30 iterations. My designs were created after thoroughly exploring various resources and open-source projects available online.</p>
 
+        <h2>Project Gallery</h2>
+        
+        <div class="simple-gallery">
+            <div class="featured-video">
+                <h4>🎥 Prototype in Action</h4>
+                <video controls>
+                    <source src="Assets/paveble_images/prototype_functioning_video.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                </video>
+            </div>
+            
+            <div class="image-grid">
+                <img src="Assets/paveble_images/withkrish_after_troubleshooting.jpeg" alt="Team collaboration">
+                <img src="Assets/paveble_images/testing_out_different_Copper.jpeg" alt="Copper testing">
+                <img src="Assets/paveble_images/trouble_shooting.jpeg" alt="Troubleshooting">
+                <img src="Assets/paveble_images/trouble_shooting_kicad.jpeg" alt="KiCad work">
+                <img src="Assets/paveble_images/more_trouble_shooting.jpeg" alt="More troubleshooting">
+            </div>
+        </div>
+
 
 </body>         
     <footer>
