few more small changes

--- a/paveble.html
+++ b/paveble.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="../styles.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <title>Paveble</title>
 </head>
 <body class="paveble-page"> 
@@ -32,13 +32,10 @@
             </h4>
             
             <div class="pitch-deck-container">
-                <iframe src="paveble pitch deck.pdf" 
-                        width="100%" 
-                        height="600px" 
-                        type="application/pdf">
-                    <p>Your browser does not support viewing PDFs. 
-                       <a href="paveble pitch deck.pdf">Download the PDF</a>.
-                    </p>
+                <iframe src="paveble%20pitch%20deck.pdf" 
+                        class="pdf-embed"
+                        title="Paveble Pitch Deck"
+                        frameborder="0">
                 </iframe>
             </div>
             <br>
@@ -50,7 +47,7 @@
             
             <div class="simple-gallery">
                 <div class="featured-video">
-                    <h4>🎥 Prototype in Action</h4>
+                    <h4>Here's a video of a single pin actuating on our prototype cell:</h4>
                     <video controls>
                         <source src="Assets/paveble_images/prototype_functioning_video.mp4" type="video/mp4">
                         Your browser does not support the video tag.
