make paveble.html open in the same window.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div class="project">
             <h2>Paveble</h2>
             <p>Making braille even more accessible!</p>
-            <button id="paveble" onclick="window.open('paveble.html', '_blank')">What is Paveble?</button>
+            <button id="paveble" onclick="window.location.href='paveble.html'">What is Paveble?</button>
         </div>
     </div>
 
