--- a/year.html
+++ b/year.html
@@ -6,24 +6,6 @@
   <title>Year Progress</title>
   <link href="../styles.css" rel="stylesheet">
   <style>
-    nav ul {
-      text-align: center;
-      display: flex;
-      justify-content: space-evenly;
-      text-decoration: none;
-      list-style: none;
-      padding: 0;
-    }
-
-    nav a {
-      text-decoration: none;
-      color: black;
-    }
-
-    nav .active a {
-      color: rgb(60, 5, 122);
-    }
-
     .container {
       max-width: 800px;
       margin: 40px auto;
@@ -112,7 +94,7 @@
 </head>
 <body>
   <nav>
-    <ul>
+    <ul class = "nav">
       <li><a href="index.html">Home</a></li>
       <li><a href="art.html">3D</a></li>
       <li class="active"><a href="year.html">Year Progress</a></li>
