added more images

--- a/paveble.html
+++ b/paveble.html
@@ -60,6 +60,13 @@
                     <img src="Assets/paveble_images/trouble_shooting.jpeg" alt="Troubleshooting" onclick="expandImage(this);">
                     <img src="Assets/paveble_images/trouble_shooting_kicad.jpeg" alt="KiCad work" onclick="expandImage(this);">
                     <img src="Assets/paveble_images/more_trouble_shooting.jpeg" alt="More troubleshooting" onclick="expandImage(this);">
+                    
+                    <br><br><br>
+                    
+                    <img src="Assets/paveble_images/braille_cell.jpeg" alt="Braille cell design" onclick="expandImage(this);">
+                    <img src="Assets/paveble_images/board_pcb.jpeg" alt="PCB board" onclick="expandImage(this);">
+                    <img src="Assets/paveble_images/old_board_fab.jpeg" alt="Old board fabrication" onclick="expandImage(this);">
+                    <img src="Assets/paveble_images/old_board_screenshot.jpeg" alt="Old board screenshot" onclick="expandImage(this);">
                 </div>
             </div>
         </div>
