--- a/empty_form.html
+++ b/empty_form.html
@@ -30,11 +30,10 @@
 </body>
 <footer>
     <h6>Email Me!</h6>
-    <p><a href="mailto:jovan@jovandevadoss.com" style="text-decoration: none; color: inherit;">📬 jovan@jovandevadoss.com</a></p>
+    <p><a href="mailto:jovandevadoss447@gmail.com" style="text-decoration: none; color: inherit;">📬 jovandevadoss447@gmail.com</a></p>
     <div class="social-links">
         <a href="https://github.com/jjovandevadoss" target="_blank" title="Follow me on GitHub">🐱</a>
         <a href="https://x.com/DevadossJovan" target="_blank" title="Follow me on X">𝕏</a>
-        <a href="https://www.instagram.com/jovandevadoss/" target="_blank" title="Follow me on Instagram">📸</a>
     </div>
 </footer>
 </html>
