--- a/paveble.html
+++ b/paveble.html
@@ -12,7 +12,6 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="art.html">3D</a></li>
             <li><a href="year.html">Year Progress</a></li>
-            <li><a href="empty_form.html">Form</a></li>
         </ul>                       
     </nav>
     <header>
@@ -108,11 +107,10 @@
 </body>         
     <footer>
         <h6>Email Me!</h6>
-        <p><a href="mailto:jovan@jovandevadoss.com" style="text-decoration: none; color: inherit;">📬 jovandevadoss447@gmail.com</a></p>
+        <p><a href="mailto:jovandevadoss447@gmail.com" style="text-decoration: none; color: inherit;">📬 jovandevadoss447@gmail.com</a></p>
         <div class="social-links">
             <a href="https://github.com/jjovandevadoss" target="_blank" title="Follow me on GitHub">🐱</a>
             <a href="https://x.com/DevadossJovan" target="_blank" title="Follow me on X">𝕏</a>
-            <a href="https://www.instagram.com/jovandevadoss/" target="_blank" title="Follow me on Instagram">📸</a>
         </div>
     </footer>
 
